dada_tests/format-strings/bad-parse-not-expression/compiler-output.ref
Error: expected expression here
   ╭─[dada_tests/format-strings/bad-parse-not-expression.dada:1:7]
   │
 1 │ p = "{class Point(a, b)}"
   ·       ────────┬────────  
   ·               ╰────────── here
───╯
